LU-1154 clio: rename coo_attr_set to coo_attr_update

coo_attr_set() is used to update object's attribute but its name
makes confusion that people intuitively think that it is used to
pass object's attribute down to server sides.

Signed-off-by: Bobi Jam <bobijam.xu@intel.com>
Change-Id: I4fb45ff1467f37c571b3acbb9465c787d0c5f261
Reviewed-on: http://review.whamcloud.com/12888
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Jinshan Xiong <jinshan.xiong@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>